[package]
name = "sinabro"
version = "0.0.1"
authors = ["Wongyu Lee <kyu21@outlook.com>"]
description = "eBPF-based Networking, Security, and Observability"
license = "Apache-2.0"
edition = "2021"

[dependencies]
sinabro-config = { path = "../config" }
common = { path = "../common", features = ["user"] }

anyhow = "1.0"
axum = "0.7.2"
aya = { version = ">=0.11", features = ["async_tokio"] }
aya-log = "0.1"
clap = { version = "4.4", features = ["derive"] }
ipnet = "2.9.0"
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
libc = "0.2"
once_cell = "1.19"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tracing = "0.1"

[dev-dependencies]
futures = { version = "0.3.17" }
http = "0.2"
http-body-util = "0.1.0"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
tower-test = "0.4"

[[bin]]
name = "agent"
path = "src/main.rs"
