[package]
name = "sinabro"
version = "0.0.1"
authors = ["Wongyu Lee <kyu21@outlook.com>"]
description = "eBPF-based Networking, Security, and Observability"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["ws"]
ws = ["kube/ws"]

[dependencies]
sinabro-config = { path = "../config" }
sinabro-netlink = { path = "../netlink" }

axum = "0.7.2"
aya = { git = "https://github.com/aya-rs/aya", rev = "1979da92a722bacd9c984865a4c7108e22fb618f", features = [
    "async_tokio",
] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "1979da92a722bacd9c984865a4c7108e22fb618f" }
clap = { version = "4.1", features = ["derive"] }
common = { path = "../common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
ipnet = "2.9.0"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
futures = "0.3.17"
tokio-util = "0.7.0"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tracing = "0.1"

[dev-dependencies]
http = "0.2"
http-body-util = "0.1.0"
hyper = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
tower-test = "0.4"

[[bin]]
name = "agent"
path = "src/main.rs"
