[package]
name = "sinabro-cni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sinabro = { version = "0.0.1", path = "../agent" }

anyhow = "1.0"
ipnet = "2.9.0"
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = "0.3"
