[package]
name = "sinabro-cni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sinabro = { version = "0.0.1", path = "../agent" }

anyhow = "1.0"
ipnet = "2.9.0"
once_cell = "1.18"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
