[package]
name = "sinabro-cni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sinabro-config = { path = "../config" }

anyhow = "1.0"
async-trait = "0.1"
ipnet = "2.9.0"
once_cell = "1.19"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
rsln = "0.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
nix = { version = "0.28.0", features = ["sched"] }
