[package]
name = "sinabro-netlink"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
libc = "0.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ipnet = { version = "2.7.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.27.1", features = ["sched", "user"] }
derive_builder = "0.13.0"
