[package]
name = "wgctrl"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/wqld/sinabro/tree/main/wgctrl"
description = "wgctrl is a crate that enables control over wireguard interfaces"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
ipnet = "2.9.0"
base64 = "0.22.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
